<resources>
    <string name="app_name">movieapp</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="no_internet_connection_check_your_internet_connection">Check your Internet Connection and Try Again</string>
    <string name="popular">Popular</string>
    <string name="retry">Retry</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_release_date">Movie Release Date</string>
    <string name="summary">Summary</string>
    <string name="votingValue">Voting</string>
    <string name="casts">Casts</string>
    <string name="recommendations">Recommendations</string>
    <string name="similarMovies">Similar Movies</string>
</resources>