<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/_100sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.fragment.MovieDetailsFragment"
        android:orientation="vertical"
        android:background="@color/black">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/movieImageView"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_200sdp"
                android:contentDescription="@null"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/_16sdp">
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_16sdp">

                <TextView
                    android:id="@+id/movieNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:textColor="@color/yellow"
                    android:text="@string/movie_name"
                    android:textSize="@dimen/_16ssp">
                </TextView>
                <TextView
                    android:id="@+id/movieReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:textColor="@color/white"
                    android:text="@string/movie_release_date"
                    android:textSize="@dimen/_12ssp">
                </TextView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/circularProgressbar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center"
                        android:indeterminate="false"
                        android:max="100"
                        android:progressDrawable="@drawable/circular_progress_bar"
                        android:secondaryProgress="100"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/progressValueText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/yellow"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="@+id/circularProgressbar"
                        app:layout_constraintEnd_toEndOf="@+id/circularProgressbar"
                        app:layout_constraintStart_toStartOf="@id/circularProgressbar"
                        app:layout_constraintTop_toTopOf="@id/circularProgressbar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/votingValue"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/circularProgressbar"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/summary"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginStart="@dimen/_8sdp">
                </TextView>

                <com.ms.square.android.expandabletextview.ExpandableTextView
                    android:id="@+id/summaryExpandableText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    expandableTextView:maxCollapsedLines="4"
                    expandableTextView:animDuration="200">

                    <TextView
                        android:id="@id/expandable_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/white" />
                    <ImageButton
                        android:id="@id/expand_collapse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:layout_gravity="end|bottom"
                        android:contentDescription="@null"
                        android:background="@android:color/transparent"/>
                </com.ms.square.android.expandabletextview.ExpandableTextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/casts"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_16ssp"
                android:layout_marginStart="@dimen/_5sdp">
            </TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movieCastRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:clipToPadding="false">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/similarMovies"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_16ssp"
                android:layout_marginStart="@dimen/_5sdp">
            </TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similarMovieRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:clipToPadding="false">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>